Bugfix Fehlender erzwungener Umbruch bei zu langen Subnav links aus Nachmeldung

--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -100,7 +100,8 @@
     --color-submenu-sublevel-bg: #{$color-submenu-sublevel-bg};
     --color-submenu-currentpage-bg: #{$color-submenu-currentpage-bg};
     --color-submenu-currentpage-text: #{$color-submenu-currentpage-text};
-
+    --color-submenu-currentlevel-text-hover: #{$color-submenu-currentpage-text-hover};
+    
     --color-menulink-hover-text: #{$color-menulink-hover-text};
     --color-menulink-hover-bg: #{$color-menulink-hover-bg}; 
     
