--- a/src/sass/elements/_paragraphs.scss
+++ b/src/sass/elements/_paragraphs.scss
@@ -4,7 +4,7 @@
 
 p, address {
     margin: 0;
-    padding: 0 0 11px 0;
+    padding: 0 0 var(--width-gutter-half) 0;
 
     @include px2rem($font-size-base);
     color: var(--color-Text);
@@ -18,6 +18,8 @@ p, address {
 p {
 	#content & {
 	    @include hyphens(auto);
+	    max-width: 75ch;
+	    text-wrap: pretty;
 	}
 	
 	#content .textwidget & {
@@ -25,7 +27,7 @@ p {
 	}
 	
 	&.searchnotice {
-		font-size: 24px;
+		font-size: 1.5rem;
 		padding: 4px 0 22px 0;
 	}
 
@@ -57,7 +59,7 @@ address {
 p.presentationtitle {
     font-weight: bold;
     @include px2rem($font-size-h1,  $font-size-base);
-    margin: 20px 0 20px 0;
+    margin: 20px 0;
 }
 
 
