--- a/src/sass/elements/_quotes.scss
+++ b/src/sass/elements/_quotes.scss
@@ -9,7 +9,6 @@ blockquote {
     border: none;
     font-family: $fontStackSerifs;
     position: relative;
-
     @include px2rem($font-size-quotes);
 
     p {
@@ -77,9 +76,20 @@ blockquote {
 
     &.pull-right {
         border-right: none;
-        padding-right: 40px;
-        padding-left: 15px;
-
+        padding-right: var(--width-gutter);
+        padding-left: var(--width-gutter-half);
+	float: right;
+	
+	p,
+	small {
+		text-align: right;
+	}
+	small:before {
+	    content: '';
+	}
+	small:after {
+	    content: '\00A0 \2014';
+	}
     }
 
 
