--- a/print.css
+++ b/print.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.4.14-6
+Version: 2.4.14
 Requires at least: 6.3
 Tested up to: 6.4
 Requires PHP: 8.0
