font icon to svg in css for main menu

--- a/src/sass/elements/_quotes.scss
+++ b/src/sass/elements/_quotes.scss
@@ -117,6 +117,14 @@ blockquote {
         }
     }
 
+    #content .wp-block-pullquote &,
+    .wp-block-pullquote & {
+	border-left: none;
+	
+	cite::before {
+	    content : "";
+	}
+    }
 }
 
 
