--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -4,6 +4,13 @@
 @use "sass:math";
 
 .nav {
+    --fau-arrow-icon-size: 1rem;
+    --fau-arrow-icon-color: var(--color-mainmenu-toplevel-text);
+    --fau-arrow-icon-color-hover: var(--color-mainmenu-toplevel-hover-text);
+    --fau-arrow-icon-size-mask: 1.3rem;
+    
+    
+    
     @include no-list;
 
     /* All links & buttons */
@@ -60,18 +67,15 @@
             > a,
             > [type=button] {
                 padding-bottom: 10px;
-                padding-right: 28px;
+                padding-right: 10px;
                 margin-bottom: 0;
 
-                &:before {
-                    @extend .fa;
-                    @extend .fa-caret-down;
-                    position: absolute;
-                    top: 11px;
-                    right: 15px;
-                    display: none;
-                    transition: transform .2s ease-in-out;
-                }
+		 &:after {
+		    margin-left: 0.1rem;
+		    mask-position-y: 0px;
+		    @extend .fau-triangle-icon-down;
+		 }
+
             }
             &:hover {
                 > a {
@@ -94,8 +98,12 @@
 
             > [type=button][aria-expanded=true] {
 		@include border-bottom-radius(0);
-                &:before {
-                    transform: rotate(-180deg);
+		
+                &:after {
+		    --fau-arrow-icon-color: var(--color-mainmenu-toplevel-hover-text);
+		    mask-position-y: -5px;
+		     @extend .fau-triangle-icon;
+		     
                 }
 
                 ~ .nav-flyout {
@@ -124,7 +132,6 @@
             font-weight: normal;
 
             @media (max-width: $screen-sm) {
-                //       font-size: 0.9rem;
                 @include px2rem($font-size-nav-level3);	
             }
         }
@@ -154,7 +161,7 @@
         padding: 0.5rem 1rem;
         margin-left: 20px;
         background-color: var(--color-mainmenu-sublevel-button-bg);
-	    color: var(--color-mainmenu-sublevel-button-text);
+	color: var(--color-mainmenu-sublevel-button-text);
 	
         &:hover, &:focus, &:active {
             background: var(--color-mainmenu-sublevel-button-hover-bg);
@@ -215,6 +222,11 @@
 
 
 .navsmall {
+    --fau-arrow-icon-size: 1rem;
+    --fau-arrow-icon-color: var(--color-mainmenu-toplevel-text);
+    --fau-arrow-icon-color-hover: var(--color-mainmenu-toplevel-hover-text);
+    --fau-arrow-icon-size-mask: 1.3rem;
+    
     @include no-list;
 
     /* All links & buttons */
@@ -270,18 +282,14 @@
             > a,
             > [type=button] {
                 padding-bottom: 10px;
-                padding-right: 28px;
+                padding-right: 10px;
                 margin-bottom: 0;
-
-                &:before {
-                    @extend .fa;
-                    @extend .fa-caret-down;
-                    position: absolute;
-                    top: 11px;
-                    right: 15px;
-                    display: none;
-                    transition: transform .2s ease-in-out;
-                }
+		
+		 &:after {
+		    margin-left: 0.1rem;
+		    mask-position-y: 0px;
+		    @extend .fau-triangle-icon-down;
+		 }
             }
             &:hover {
                 > a {
@@ -304,10 +312,13 @@
 
             > [type=button][aria-expanded=true] {
 		@include border-bottom-radius(0);
-                &:before {
-                    transform: rotate(-180deg);
+              
+		&:after {
+		    --fau-arrow-icon-color: var(--color-mainmenu-toplevel-hover-text);
+		    mask-position-y: -5px;
+		     @extend .fau-triangle-icon;   
                 }
-
+ 
                 ~ .nav-flyout {
                     display: block;
                 }
@@ -334,7 +345,6 @@
             font-weight: normal;
 
             @media (max-width: $screen-sm) {
-                //       font-size: 0.9rem;
                 @include px2rem($font-size-nav-level3);	
             }
         }
@@ -410,13 +420,11 @@
                 margin-bottom: 0;
 
                 &.level2 > li {
-		    
                     &:not(.has-sub) {
                         > a {
                             border-bottom: none;
                         }
                     }
-
                     > a {
 			@include px2rem($font-size-nav-level2);
                         padding-left: var(--width-gutter-half);
@@ -511,8 +519,7 @@
                 background-color: var(--color-white);
                 margin-bottom: 0;
 
-                &.level2 > li {
-		    
+                &.level2 > li {	    
                     &:not(.has-sub) {
                         > a {
                             border-bottom: none;
@@ -544,9 +551,6 @@
                         column-width: 330px;
                     }
                     .button-portal {
-                        //margin-right: auto;
-                        //padding: 7px 15px;
-
                         @include inline-block;
                         @include buttonstyle();
                         @include px2rem($font-size-nav-buttons);
@@ -589,8 +593,12 @@
 
 #mainnav-toggle,
 #mainnav-toggle-close {
-    min-width: 2rem;
-    min-height: 2rem;
+    --fau-icon-size: 1.5rem;
+    --fau-icon-color: var(--color-Default);
+    --fau-icon-color-hover: var(--color-Default);
+    --fau-icon-size-mask: 1.3rem;
+    
+
     position: absolute;
     right: 0px;
     top: 0px;
@@ -598,45 +606,23 @@
     background-color: transparent;    
     z-index: 100;
     color: var(--color-Default);
-    padding: 4px 10px;
     margin: 0;
+    padding: 10px 10px 4px 10px;
     display: none;
-    
-    &:hover,
-    &:focus,
-    &:active {
-        border-color: var(--color-FAU);
- //       box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.22);
-    }
-    
-    &[aria-expanded="true"] {
-	background-color: var(--color-MobileFlyoutMenuBackground);
-    }
-     &[aria-expanded="true"]:hover, &[aria-expanded="true"]:focus,  {
-	background-color: var(--color-MobileFlyoutMenuBackground);
-    }
-    
-    
-    
+    cursor: pointer;
+
     span {
         @include hideout();
     }
 }
 
 #mainnav-toggle:before {
-    font-size: 28px;
-    @extend .fa;
-    @extend .fa-bars;
+    @extend .fau-icon-bars;
 }
 
-#mainnav-toggle-close:before {
-    @extend .fa;
-    @extend .fa-close;
-}
-
+#mainnav-toggle-close:before,
 #mainnav-toggle[aria-expanded=true]:before {
-    @extend .fa-close;
-    background-color: var(--color-MobileFlyoutMenuBackground);
+     @extend .fau-icon-close;  
 }
 
 
@@ -663,7 +649,6 @@
     }
 
     .nav {
-    //    border-top: 1px solid var(--color-primary-ci-hell);
 	background-color: var(--color-MobileFlyoutMenuBackground);
         .nav-flyout {
             padding: 0;
@@ -745,7 +730,9 @@
                 margin-left: 0;
                 border-bottom: 1px solid var(--color-primary-dunkler);
             
-                &:hover, &:focus, &:active {
+                &:hover, 
+	        &:focus, 
+		&:active {
                     background: var(--color-mainmenu-sublevel-button-hover-bg);
                     color: var(--color-mainmenu-sublevel-button-hover-text);    
                 }
@@ -793,7 +780,6 @@
     }
 
     .no-js #nav:target {
-
         #mainnav-toggle {
             display: none;
         }
@@ -804,6 +790,7 @@
 
     .no-js #nav:target #nav-wrapper,
     #nav [aria-expanded=true] ~ #nav-wrapper {
+	background-color: var(--color-MobileFlyoutMenuBackground);
         display: block;
     }
 
@@ -814,25 +801,6 @@
     .js {
         .nav-flyout {
             display: none;
-        }
-
-        .nav > li.level1 {
-            > a,
-            > [type=button] {
-
-                &:before {
-                    display: block;
-                }
-            }
-        }
-        .navsmall > li.level1 {
-            > a,
-            > [type=button] {
-
-                &:before {
-                    display: block;
-                }
-            }
         }
     }
 
@@ -856,18 +824,6 @@
             > [type=button] {
                 padding: 10px;
                 border-radius: var(--border-radius);
-            }
-
-            &.has-sub {
-                > a,
-                > [type=button] {
-                    &:before {
-                        display: block;
-                        right: 11px;
-                    }
-                }
-		
-
             }
         }
 
@@ -893,17 +849,7 @@
                 border-radius: var(--border-radius);
             }
 
-            &.has-sub {
-                > a,
-                > [type=button] {
-                    &:before {
-                        display: block;
-                        right: 11px;
-                    }
-                }
-		
-
-            }
+          
         }
 
         li {
