--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -241,6 +241,48 @@ Icons as functions
   display: none;
 }
 
+.fau-icon, .fau-icon-pause, .fau-icon-play, .fau-icon-close, .fau-icon-bars {
+  --_icon-size: var(--fau-icon-size, 1rem);
+  --_icon-color: var(--fau-icon-color, var(--color-Text));
+  --_icon-color-hover: var(--fau-icon-color-hover, var(--color-MainBackground));
+  --_icon-size-mask: var(--fau-icon-size-mask, var(--fau-icon-size, 1.6rem));
+  width: var(--_icon-size);
+  height: var(--_icon-size);
+  display: inline-block;
+  content: " ";
+  -webkit-mask-size: var(--_icon-size-mask);
+          mask-size: var(--_icon-size-mask);
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+          mask-position: center;
+  background-color: var(--_icon-color);
+}
+.fau-icon:focus, .fau-icon-pause:focus, .fau-icon-play:focus, .fau-icon-close:focus, .fau-icon-bars:focus, .fau-icon:hover, .fau-icon-pause:hover, .fau-icon-play:hover, .fau-icon-close:hover, .fau-icon-bars:hover {
+  background-color: var(--_icon-color-hover);
+}
+
+.fau-icon-bars {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/%3E%3C/svg%3E%0A');
+  transition: transform 0.2s linear;
+}
+
+.fau-icon-close {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"%3E%3Cpath d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"%3E%3Cpath d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/%3E%3C/svg%3E%0A');
+}
+
+.fau-icon-play {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"%3E%3Cpath d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"%3E%3Cpath d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/%3E%3C/svg%3E%0A');
+}
+
+.fau-icon-pause {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"%3E%3Cpath d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"%3E%3Cpath d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"/%3E%3C/svg%3E%0A');
+}
+
 /*-----------------------------------------------------------------------------------*/
 /* Social Media and Portal Icons 
 /*-----------------------------------------------------------------------------------*/
@@ -459,6 +501,77 @@ Icons as functions
 .svg-socialmedia a[href*=ical]:before {
   -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 59 59"%3E%3Cpath d="M31.793,41.707C31.988,41.902,32.244,42,32.5,42s0.512-0.098,0.707-0.293l3.293-3.293l3.293,3.293 C39.988,41.902,40.244,42,40.5,42s0.512-0.098,0.707-0.293c0.391-0.391,0.391-1.023,0-1.414L37.914,37l3.293-3.293 c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0L36.5,35.586l-3.293-3.293c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414L35.086,37l-3.293,3.293C31.402,40.684,31.402,41.316,31.793,41.707z M26.5,0c-0.553,0-1,0.447-1,1s0.447,1,1,1c1.302,0,2.402,0.838,2.816,2h2.083C30.934,1.721,28.914,0,26.5,0z M32.5,0c-0.553,0-1,0.447-1,1s0.447,1,1,1c1.302,0,2.402,0.838,2.816,2h2.083C36.934,1.721,34.914,0,32.5,0z M38.5,0c-0.553,0-1,0.447-1,1s0.447,1,1,1c1.302,0,2.402,0.838,2.816,2h2.083C42.934,1.721,40.914,0,38.5,0z M43.399,4C43.465,4.323,43.5,4.658,43.5,5c0,2.757-2.243,5-5,5c-0.553,0-1-0.447-1-1s0.447-1,1-1c1.654,0,3-1.346,3-3 c0-0.353-0.072-0.686-0.184-1h-3.917C37.465,4.323,37.5,4.658,37.5,5c0,2.757-2.243,5-5,5c-0.553,0-1-0.447-1-1s0.447-1,1-1 c1.654,0,3-1.346,3-3c0-0.353-0.072-0.686-0.184-1h-3.917C31.465,4.323,31.5,4.658,31.5,5c0,2.757-2.243,5-5,5 c-0.553,0-1-0.447-1-1s0.447-1,1-1c1.654,0,3-1.346,3-3c0-0.353-0.072-0.686-0.184-1h-3.917C25.465,4.323,25.5,4.658,25.5,5 c0,2.757-2.243,5-5,5c-0.553,0-1-0.447-1-1s0.447-1,1-1c1.654,0,3-1.346,3-3c0-0.353-0.072-0.686-0.184-1H18.5h-0.816 c0.414-1.162,1.514-2,2.816-2s2.402,0.838,2.816,2h2.083c-0.465-2.279-2.484-4-4.899-4s-4.434,1.721-4.899,4H14.5h-14v11v14v2v12v2 v14h14h2h12h2h12h2h14V45v-2V31v-2V15V4H43.399z M14.5,57h-12V45h12V57z M14.5,43h-12V31h12V43z M14.5,29h-12V17h12V29z M28.5,57 h-12V45h12V57z M28.5,43h-12V31h12V43z M28.5,29h-12V17h12V29z M42.5,57h-12V45h12V57z M42.5,43h-12V31h12V43z M42.5,29h-12V17h12 V29z M56.5,57h-12V45h12V57z M56.5,43h-12V31h12V43z M56.5,29h-12V17h12V29z"/%3E%3C/svg%3E%0A');
           mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 59 59"%3E%3Cpath d="M31.793,41.707C31.988,41.902,32.244,42,32.5,42s0.512-0.098,0.707-0.293l3.293-3.293l3.293,3.293 C39.988,41.902,40.244,42,40.5,42s0.512-0.098,0.707-0.293c0.391-0.391,0.391-1.023,0-1.414L37.914,37l3.293-3.293 c0.391-0.391,0.391-1.023,0-1.414s-1.023-0.391-1.414,0L36.5,35.586l-3.293-3.293c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414L35.086,37l-3.293,3.293C31.402,40.684,31.402,41.316,31.793,41.707z M26.5,0c-0.553,0-1,0.447-1,1s0.447,1,1,1c1.302,0,2.402,0.838,2.816,2h2.083C30.934,1.721,28.914,0,26.5,0z M32.5,0c-0.553,0-1,0.447-1,1s0.447,1,1,1c1.302,0,2.402,0.838,2.816,2h2.083C36.934,1.721,34.914,0,32.5,0z M38.5,0c-0.553,0-1,0.447-1,1s0.447,1,1,1c1.302,0,2.402,0.838,2.816,2h2.083C42.934,1.721,40.914,0,38.5,0z M43.399,4C43.465,4.323,43.5,4.658,43.5,5c0,2.757-2.243,5-5,5c-0.553,0-1-0.447-1-1s0.447-1,1-1c1.654,0,3-1.346,3-3 c0-0.353-0.072-0.686-0.184-1h-3.917C37.465,4.323,37.5,4.658,37.5,5c0,2.757-2.243,5-5,5c-0.553,0-1-0.447-1-1s0.447-1,1-1 c1.654,0,3-1.346,3-3c0-0.353-0.072-0.686-0.184-1h-3.917C31.465,4.323,31.5,4.658,31.5,5c0,2.757-2.243,5-5,5 c-0.553,0-1-0.447-1-1s0.447-1,1-1c1.654,0,3-1.346,3-3c0-0.353-0.072-0.686-0.184-1h-3.917C25.465,4.323,25.5,4.658,25.5,5 c0,2.757-2.243,5-5,5c-0.553,0-1-0.447-1-1s0.447-1,1-1c1.654,0,3-1.346,3-3c0-0.353-0.072-0.686-0.184-1H18.5h-0.816 c0.414-1.162,1.514-2,2.816-2s2.402,0.838,2.816,2h2.083c-0.465-2.279-2.484-4-4.899-4s-4.434,1.721-4.899,4H14.5h-14v11v14v2v12v2 v14h14h2h12h2h12h2h14V45v-2V31v-2V15V4H43.399z M14.5,57h-12V45h12V57z M14.5,43h-12V31h12V43z M14.5,29h-12V17h12V29z M28.5,57 h-12V45h12V57z M28.5,43h-12V31h12V43z M28.5,29h-12V17h12V29z M42.5,57h-12V45h12V57z M42.5,43h-12V31h12V43z M42.5,29h-12V17h12 V29z M56.5,57h-12V45h12V57z M56.5,43h-12V31h12V43z M56.5,29h-12V17h12V29z"/%3E%3C/svg%3E%0A');
+}
+
+/*----------------------------------------------------------------------------*/
+/* _arrows 
+/* Arrowicons, Carets and Angles
+/* Created on : 28.03.2024, 08:52:42
+/*----------------------------------------------------------------------------*/
+.fau-arrow-icon, .fau-triangle-icon, .fau-triangle-icon-down, .fau-angle-icon-down, .fau-angle-icon-left, .fau-angle-icon-right, .fau-angle-icon-up,
+.fau-angle-icon, .fau-arrow-icon-down {
+  --_icon-size: var(--fau-arrow-icon-size, 1rem);
+  --_icon-color: var(--fau-arrow-icon-color, var(--color-Text));
+  --_icon-color-hover: var(--fau-arrow-icon-color-hover, var(--color-MainBackground));
+  --_icon-size-mask: var(--fau-arrow-icon-size-mask, var(--fau-arrow-icon-size, 1.6rem));
+  width: var(--_icon-size);
+  height: var(--_icon-size);
+  display: inline-block;
+  content: " ";
+  -webkit-mask-size: var(--_icon-size-mask);
+          mask-size: var(--_icon-size-mask);
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+          mask-position: center;
+  background-color: var(--_icon-color);
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M17.6569 8.96207L16.2394 10.373L12.9845 7.10273L12.9708 20.7078L10.9708 20.7058L10.9844 7.13793L7.75416 10.3531L6.34326 8.93559L12.0133 3.29199L17.6569 8.96207Z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M17.6569 8.96207L16.2394 10.373L12.9845 7.10273L12.9708 20.7078L10.9708 20.7058L10.9844 7.13793L7.75416 10.3531L6.34326 8.93559L12.0133 3.29199L17.6569 8.96207Z"/%3E%3C/svg%3E%0A');
+  transition: transform 0.2s linear;
+}
+.fau-arrow-icon:focus, .fau-triangle-icon:focus, .fau-triangle-icon-down:focus, .fau-angle-icon-down:focus, .fau-angle-icon-left:focus, .fau-angle-icon-right:focus, .fau-angle-icon-up:focus,
+.fau-angle-icon:focus, .fau-arrow-icon-down:focus, .fau-arrow-icon:hover, .fau-triangle-icon:hover, .fau-triangle-icon-down:hover, .fau-angle-icon-down:hover, .fau-angle-icon-left:hover, .fau-angle-icon-right:hover, .fau-angle-icon-up:hover,
+.fau-angle-icon:hover, .fau-arrow-icon-down:hover {
+  background-color: var(--_icon-color-hover);
+}
+
+.fau-arrow-icon-down {
+  transform: rotate(180deg);
+}
+
+.fau-angle-icon-up,
+.fau-angle-icon {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+  transform: rotate(270deg);
+}
+
+.fau-angle-icon-right {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+}
+
+.fau-angle-icon-left {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+  transform: rotate(180deg);
+}
+
+.fau-angle-icon-down {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+  transform: rotate(90deg);
+}
+
+.fau-triangle-icon-down {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M6.5,8.5l6,7l6-7H6.5z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M6.5,8.5l6,7l6-7H6.5z"/%3E%3C/svg%3E%0A');
+}
+
+.fau-triangle-icon {
+  -webkit-mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M6.5,8.5l6,7l6-7H6.5z"/%3E%3C/svg%3E%0A');
+          mask-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath d="M6.5,8.5l6,7l6-7H6.5z"/%3E%3C/svg%3E%0A');
+  transform: rotate(180deg);
 }
 
 /*-----------------------------------------------------------------------------------*/
