--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -14,6 +14,15 @@ $slider-height-md: 512px;
 }
  
 #hero-slides {
+    
+    --fau-arrow-icon-size: 10rem;
+    --fau-arrow-icon-color: rgba(255, 255, 255, 0.8); // var(--color-mainmenu-toplevel-text);
+    --fau-arrow-icon-color-hover: rgba(255, 255, 255, 1); // var(--color-mainmenu-toplevel-hover-text);
+    --fau-icon-size: 2rem;
+    --fau-icon-color: var(--fau-arrow-icon-color);
+    --fau-icon-color-hover: var(--fau-arrow-icon-color-hover);
+    --fau-icon-size-mask: 1.8rem;
+    
 	position: relative;
 	height: auto;
 	width: 100%;
@@ -24,11 +33,7 @@ $slider-height-md: 512px;
 		width: 100%;
 
 		.no-js & {
-			//display: none;
-			
-			// why is this outcommented?
-			// is the slider usable without js?
-			// todo: check 
+			display: none;
 		}   
 	}
 
@@ -188,11 +193,11 @@ $slider-height-md: 512px;
 		padding: 0;
 
 	}
+	.slick-startstop,
 	.slick-prev,
 	.slick-next {
 		position: absolute;
 		display: block;
-		width: 60px;
 		line-height: 0px;
 		font-size: 0px;
 		cursor: pointer;
@@ -200,37 +205,15 @@ $slider-height-md: 512px;
 		color: transparent;
 
 		bottom: auto;
-		top: calc(50% - (45px + 70px + 225px)/2);
+		top: calc(50% - 5rem);
 		height: auto;
-
-		@media (max-width: $screen-sm) {
-			top: calc(50% - (20px + 70px + 105px)/2);
-		}
 
 		padding: 0;
 		border: none;
 		outline: none;
+		filter: drop-shadow(1px 1px 4px rgba(0,0,0,0.75));
+		transition: all .2s linear;
 
-
-		&:hover,
-		&:focus {
-			outline: none;
-			background: transparent;
-			color: #fff;
-
-			&:before {
-				color: rgba(255, 255, 255, 0.8);
-			}
-		}
-
-		&:before {	
-			font-size: 150px;
-			color: rgba(255, 255, 255, 0.83);
-			text-shadow: 2px 2px rgba(0, 0, 0, 0.63);
-			@media (max-width: $screen-sm) {
-				font-size: 70px;
-			}
-		}
 	}
 
 	.slick-prev {
@@ -240,7 +223,7 @@ $slider-height-md: 512px;
 			left: auto;
 			right: var(--width-gutter-half);
 		}
-		@media (min-width: $break-1360 + 20) {
+		@media (min-width: $screen-xl) {
 			left: var(--width-gutter-half);
 			[dir="rtl"] & {
 				left: auto;
@@ -248,79 +231,63 @@ $slider-height-md: 512px;
 			}
 		}
 		&:before {
-			@extend .fa;
-			@extend .fa-chevron-left;
-
-			[dir="rtl"] & {
-				@extend .fa-chevron-right;
-			}
+		    @extend  .fau-angle-icon-left;
+		    [dir="rtl"] & {
+			  @extend  .fau-angle-icon-right;
+		    }
 		}
 	}
 
 	.slick-next {
-		right: 25px;
+		right: var(--width-gutter-half);
 		
 		[dir="rtl"] & {
 			left: var(--width-gutter-half);
 			right: auto;
-			.slick-arrow { 
-				font-size: 11em;
-		color:#fff;
-
-			}
 		}
 
-		@media (min-width: $break-1360 + 20) {
-			right: calc(var(--width-gutter) + 5px);
+		@media (min-width: $screen-xl) {
+			right: var(--width-gutter);
 			[dir="rtl"] & {
-				left: var(--width-gutter-half);
+				left: var(--width-gutter);
 				right: auto;
 			}
 		}
 
 		&:before {
-			@extend .fa;
-			@extend .fa-chevron-right;
-
-			[dir="rtl"] & {
-				@extend .fa-chevron-left;
-			}
+		    @extend  .fau-angle-icon-right;
+		    [dir="rtl"] & {
+			@extend  .fau-angle-icon-left;
+		    }
 		}
 	}
 
 	.slick-startstop {
-		position: absolute;
-		display: block;
-		top: 20px;
-		right: 20px;
-		font-size: 28px ;
-		text-shadow: 2px 2px rgba(0, 0, 0, 0.63);
+		top: var(--width-gutter-half);
+		right: var(--width-gutter-half);
+		bottom: auto;
+
 		    
 		@media (min-width: $screen-xs) {
 			bottom: inherit;
 		}
-		@media (max-width: $screen-sm) {
-			right:calc(50% - 14px);
-			top: 50%;
+		@media (max-width: $screen-xl) {
+			right: var(--width-gutter);
+			top:  var(--width-gutter);
 		}
 
-
-		background: transparent;
-		color: rgba(255, 255, 255, 0.83);
-		margin: 0;
-		padding: 1px 4px;
-		border: none;
-
-		&:hover,
-		&:focus {
-			color: #fff;
-			background: transparent;
-			transition-timing-function: ease;
-			text-decoration: underline;
+		&:before {
+		    @extend  .fau-icon-pause;
 		}
+
 
 		.no-js & {
 			display: none;
+		}
+	}
+	.slick-startstop.stopped {
+	    &:before {
+		    @extend  .fau-icon-play;
 		}
 	}
 }
