--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -15,7 +15,8 @@ $slider-height-md: 512px;
  
 #hero-slides {
     
-    --fau-arrow-icon-size: 10rem;
+    --fau-arrow-icon-size: 2rem;
+    --fau-arrow-icon-size-mask: 3rem;
     --fau-arrow-icon-color: rgba(255, 255, 255, 0.8); // var(--color-mainmenu-toplevel-text);
     --fau-arrow-icon-color-hover: rgba(255, 255, 255, 1); // var(--color-mainmenu-toplevel-hover-text);
     --fau-icon-size: 2rem;
@@ -23,18 +24,27 @@ $slider-height-md: 512px;
     --fau-icon-color-hover: var(--fau-arrow-icon-color-hover);
     --fau-icon-size-mask: 1.8rem;
     
+    @media (min-width: $screen-xs) {	
+	--fau-arrow-icon-size: 4rem;
+	--fau-arrow-icon-size-mask: 8rem;
+    }
+    @media (min-width: $screen-xl) {
+	--fau-arrow-icon-size: 5rem;
+	--fau-arrow-icon-size-mask: 10rem;
+    }
+    
 	position: relative;
 	height: auto;
 	width: 100%;
 	overflow: hidden;
 	
 	@media (min-width: $screen-xxs) {
-		display: block;
-		width: 100%;
+	    display: block;
+	    width: 100%;
 
-		.no-js & {
-			display: none;
-		}   
+	    .no-js & {
+		    display: none;
+	    }   
 	}
 
 	@media (min-width: $screen-xs) {
@@ -205,7 +215,10 @@ $slider-height-md: 512px;
 		color: transparent;
 
 		bottom: auto;
-		top: calc(50% - 5rem);
+		top: 3rem;
+		@media (min-width: $screen-xs) {
+		    top: calc(50% - 5rem);
+		}
 		height: auto;
 
 		padding: 0;
@@ -223,13 +236,8 @@ $slider-height-md: 512px;
 			left: auto;
 			right: var(--width-gutter-half);
 		}
-		@media (min-width: $screen-xl) {
-			left: var(--width-gutter-half);
-			[dir="rtl"] & {
-				left: auto;
-				right: var(--width-gutter-half);
-			}
-		}
+
+		
 		&:before {
 		    @extend  .fau-angle-icon-left;
 		    [dir="rtl"] & {
@@ -246,13 +254,7 @@ $slider-height-md: 512px;
 			right: auto;
 		}
 
-		@media (min-width: $screen-xl) {
-			right: var(--width-gutter);
-			[dir="rtl"] & {
-				left: var(--width-gutter);
-				right: auto;
-			}
-		}
+		
 
 		&:before {
 		    @extend  .fau-angle-icon-right;
@@ -263,15 +265,17 @@ $slider-height-md: 512px;
 	}
 
 	.slick-startstop {
-		top: var(--width-gutter-half);
-		right: var(--width-gutter-half);
+		
+		right: calc(50% - 1rem);
 		bottom: auto;
-
-		    
 		@media (min-width: $screen-xs) {
-			bottom: inherit;
+		    top: var(--width-gutter-half);
+		    right: var(--width-gutter-half);
+		    bottom: inherit;
 		}
-		@media (max-width: $screen-xl) {
+		    
+		
+		@media (min-width: $screen-xl) {
 			right: var(--width-gutter);
 			top:  var(--width-gutter);
 		}
