--- a/src/sass/fau-theme-admin.scss
+++ b/src/sass/fau-theme-admin.scss
@@ -33,3 +33,5 @@ $font-path-roboto:	'../fonts/roboto/';
 // Backend Specials
 @import "backend/backend";
 
+// Block Library Overwrites
+@import "block-library/block-library"
