--- a/src/sass/block-library/_wp-block-button.scss
+++ b/src/sass/block-library/_wp-block-button.scss
@@ -6,3 +6,9 @@
 :where(.wp-block-button__link) {
     border-radius: var(--border-radius, 9999px);
 }
+
+.wp-element-button, 
+.wp-block-button__link {
+    @include defaultlinkstyle();
+    @include buttonstyle();
+}
