--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -5431,3 +5431,52 @@ Backend CSS Settings for Block Editor (Gutenberg)
 :where(.wp-block-button__link) {
   border-radius: var(--border-radius, 9999px);
 }
+
+.wp-element-button,
+.wp-block-button__link {
+  box-shadow: none;
+  transition: -webkit-text-decoration 0.1s ease;
+  transition: text-decoration 0.1s ease;
+  transition: text-decoration 0.1s ease, -webkit-text-decoration 0.1s ease;
+  padding: 0;
+  text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
+  text-underline-offset: 0.3rem;
+  text-decoration-thickness: 0.15rem;
+  display: inline-block;
+  font-size: 0.938rem;
+  color: var(--color-button-text);
+  background-color: var(--color-button-bg);
+  border: none;
+  padding: 10px 18px;
+  text-decoration: none;
+  border-radius: var(--border-radius-buttons, 3px);
+  font-size: 1rem;
+  line-height: 1.5;
+  text-align: center;
+  font-weight: normal;
+  margin: 5px 0;
+}
+.wp-element-button:hover, .wp-element-button:focus,
+.wp-block-button__link:hover,
+.wp-block-button__link:focus {
+  box-shadow: none;
+  text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
+  text-decoration-thickness: 0.3rem;
+}
+.wp-element-button:hover, .wp-element-button:focus,
+.wp-block-button__link:hover,
+.wp-block-button__link:focus {
+  color: var(--color-button-hover-text);
+  background-color: var(--color-button-hover-bg);
+}
+.wp-element-button:hover, .wp-element-button:focus,
+.wp-block-button__link:hover,
+.wp-block-button__link:focus {
+  text-decoration: none;
+}
