--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -195,10 +195,10 @@ Mixins File for Wordpress Theme FAU
 @mixin default-img() {
     
     @include box-shadow(none);
-    @media (min-width: $screen-xs) {
-        @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
-	padding: 2px;
-    }
+//    @media (min-width: $screen-xs) {
+//        @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+//	padding: 2px;
+//    }
     border: 0;
   
 }
