--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.4.16-6
+Version: 2.4.16-18
 Requires at least: 6.3
 Tested up to: 6.4
 Requires PHP: 8.0
@@ -6472,11 +6472,10 @@ blockquote p strong {
   font-weight: bolder;
 }
 #tinymce blockquote, #content blockquote {
-  max-width: calc(100% - 40px);
-  width: 100%;
-  margin: 10px;
-  padding: 31px 20px 20px 20px;
-  min-height: 50px;
+  max-width: calc(100% - 2.5rem);
+  margin: 1rem;
+  padding: 2rem 1.5rem;
+  min-height: 3rem;
   border-left: 10px solid var(--color-primary-ci-hell);
   border-radius: var(--border-radius);
   background: var(--color-ContentRegions);
@@ -6485,17 +6484,16 @@ blockquote p strong {
 }
 @media (min-width: 768px) {
   #tinymce blockquote, #content blockquote {
-    margin: 10px 50px;
-    padding: 31px 40px 20px 40px;
-    max-width: calc(100% - 80px);
+    margin: 0.6rem 2rem;
+    max-width: calc(100% - 4rem);
   }
 }
 #tinymce blockquote p, #tinymce blockquote h1, #tinymce blockquote h2, #tinymce blockquote h3, #tinymce blockquote h4, #tinymce blockquote h5, #tinymce blockquote h6, #content blockquote p, #content blockquote h1, #content blockquote h2, #content blockquote h3, #content blockquote h4, #content blockquote h5, #content blockquote h6 {
   color: var(--color-Text);
 }
 #content .sidebar-inline blockquote {
-  margin: 10px;
-  padding: 10px;
+  margin: 0.6rem;
+  padding: 0.5rem;
 }
 blockquote small,
 blockquote cite {
@@ -6509,7 +6507,7 @@ blockquote cite:before {
   content: "— ";
 }
 blockquote cite {
-  margin-top: 10px;
+  margin-top: var(--width-gutter-half);
 }
 #content blockquote img {
   box-shadow: none;
@@ -9223,12 +9221,33 @@ body.nav-toggled #headerwrapper {
   height: 100%;
 }
 .meta-logo a {
+  box-shadow: none;
+  transition: -webkit-text-decoration 0.1s ease;
+  transition: text-decoration 0.1s ease;
+  transition: text-decoration 0.1s ease, -webkit-text-decoration 0.1s ease;
+  padding: 0;
+  text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
+  text-underline-offset: 0.3rem;
+  text-decoration-thickness: 0.15rem;
+  text-decoration: none;
   border: 1px dashed transparent;
-  padding: 0 5px;
+  padding: 0 0.5rem;
+}
+.meta-logo a:hover, .meta-logo a:focus {
+  box-shadow: none;
+  text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
+  text-decoration-thickness: 0.3rem;
 }
 .meta-logo a:hover, .meta-logo a:focus {
   border-color: var(--color-primary-ci-hell);
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.22);
+  text-decoration: underline;
 }
 .meta-logo .textlogo .baselogo {
   display: none;
@@ -12025,6 +12044,7 @@ $slider-height-md: 512px;
 .content-row {
   display: flex;
   flex-wrap: wrap;
+  grid-gap: 30px;
 }
 @media (min-width: 768px) {
   .content-row {
@@ -12058,11 +12078,6 @@ $slider-height-md: 512px;
 .content-row .entry-content {
   min-width: 290px;
   flex-grow: 1;
-}
-@media (min-width: 768px) {
-  .content-row .entry-content {
-    padding-left: 40px;
-  }
 }
 @media (min-width: 1400px) {
   .content-row .entry-content {
