div anpassungen im backend bei den meta boxen

--- a/src/sass/backend/editor-style/_gutenberg.scss
+++ b/src/sass/backend/editor-style/_gutenberg.scss
@@ -6,6 +6,7 @@ Backend CSS Settings for Block Editor (Gutenberg)
 .block-editor {
     .editor-styles-wrapper {
 	margin: 0 30px;
+	padding: var(--width-gutter-half, 15px);
     }
     
     .edit-post-layout__metaboxes {
