--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -127,11 +127,12 @@
 
 .meta-links {
     display: none;
+    // Hinweis: Für Handyauflösung wird eine eigene Class verwendet und 
+    // diese unsichtbar gemacht
     margin: 0; 
+    padding: 0;
     background-color: var(--color-MobileFlyoutMenuBackground);
-   
     z-index: 100;
-    padding: var(--width-gutter-half);
 
     @media (min-width: $screen-md) {
 	background-color: var(--color-MetaBackgroundLight);
@@ -139,7 +140,6 @@
         align-items: center;
         justify-content: space-between;
         column-gap: 1rem;
-	padding: 5px 0;
         background-color: transparent;
 
         .orgalist {
@@ -158,6 +158,7 @@
             order: 2;
         }
     }
+    
 
     ul li,
     ol li {
@@ -165,10 +166,11 @@
         padding: 0;
 	
         a {
+	    display: inline-block;
 	    color: var(--color-MetaTextDefault);
-            display: inline-block;
-            padding: 0.15rem 0;
             text-decoration: none;
+	    min-height: 44px;
+	    line-height: 44px;
 	    
 	    &:focus,
             &:hover {
@@ -181,22 +183,23 @@
 
     .orgalist {
         margin: 0;
+        padding-left: var(--width-gutter-half);
+        padding-right: var(--width-gutter-half);
 
         @media (min-width: $screen-sm) {
             flex-shrink: 0;
-        }
+	    padding-left: 0;
+	    padding-right: 0;
+        } 
     }
 
     .fauhome {
         padding: 0;
 
         a {
-            padding: 0.25rem 0.25rem 0.25rem 0;
 	    color: var(--color-FAU);
-	    
-            @media (min-width: $screen-sm) {
-                display: flex;
-            }
+            display: flex;
+
 
             &:hover {
                 color: var(--color-white);
@@ -215,12 +218,15 @@
                 margin-left: 0;
                 margin-right: 2px;
                 vertical-align: middle;
+		min-height: 44px;
+
             }
         }
 
         svg {
+	    min-height: 44px;
             fill: currentColor;
-            vertical-align: middle;
+	    margin-right: 0.5rem;
         }
     }
 
