--- a/src/sass/structure/header/_metasearch.scss
+++ b/src/sass/structure/header/_metasearch.scss
@@ -14,8 +14,6 @@
     @media (min-width: $screen-md) {
         display: inline-block;
         margin: 0 0 0 auto;
-	height: 1.875rem;
-
         [dir="rtl"] & {
             margin-right: auto;
 	    margin-left: 0;
@@ -26,10 +24,9 @@
     .search-initiate-button {
 	display: none;
 	@media (min-width: $screen-md) {
-             display: inline-block;
+             display: inherit;
         }
 	
-	height: 1.875rem;
         border-radius: var(--border-radius);
         cursor: pointer;
         z-index: 999;
@@ -39,16 +36,20 @@
         }
        
         svg {
-            display: block;
+            display: inline-block;;
             width: 30px;
             height: 30px;
+	    min-height: 44px;
+	    min-width: 44px;
+	    padding: 7px;
             fill: var(--color-zentral-basis);
+	    
         }
 
         &:hover,
         &:focus {
-            background: var(--color-zentral-dunkelste);
-
+	    background-color: var(--color-primary-ci-hell);
+	    color: var(--color-primary-ci-hell-kontrast);
             svg {
                 fill: var(--color-white);
             }
@@ -70,19 +71,28 @@
 	display: flex;
         border: none;
         margin: 0;
+        padding: var(--width-gutter-half);
+	justify-content: center;
 	
-        padding: var(--width-gutter-half) 0;
 	@media (min-width: $screen-md) {
                 padding: 0;
+		justify-content: flex-start;
         }
-	
+	input {
+	     margin: 0;
+	     border-radius: var(--border-radius);
+	     height: 1.875rem;
+	     min-height: 44px;
+	     border-left: 0;
+	     border-right: 0;
+	     border-top: 5px solid  var(--color-MetaBackgroundLight);
+	     border-bottom: 5px solid  var(--color-MetaBackgroundLight);
+	}
         input[type="text"] {
-            border-radius: var(--border-radius);
             width: 0;
-            border: none;
+       //     border: none;
             outline: none;
-            color: var(--color-zentral-basis);
-            height: 1.875rem;
+            color: var(--color-zentral-basis);           
             background: var(--color-white);
             font-weight: bold;
             visibility: hidden;
@@ -90,6 +100,7 @@
 
             &:focus {
                 box-shadow: none;
+		border-color:  var(--color-MetaBackgroundLight);
             }
 
             
@@ -124,21 +135,19 @@
 	input[type="text"]::placeholder {
                opacity: 1;
 	       font-weight: normal;
-               color: var(--color-zentral-basis);
+               color: var(--color-Text);
             }
 
-        input[type="submit"] {
-            border-radius: var(--border-radius);
+        input[type="submit"] {           
             position: relative;
             z-index: 100;
-            height: 1.875rem;
             width: 0;
             padding: 0;
             font-weight: bold;
-            border: none;
+    //        border: none;
             outline: none;
-            color: var(--color-white);
-            background: var(--color-zentral-basis);
+            color: var(--color-primary-ci-hell-kontrast);
+            background: var(--color-primary-ci-hell);
             margin: 0;
             visibility: hidden;
             opacity: 0;
@@ -160,7 +169,9 @@
 
             &:hover,
             &:focus {
-                background: var(--color-zentral-dunkelste);
+                // background: var(--color-zentral-dunkelste);
+		background-color: var(--color-primary-dunkelste);
+		color: var(--color-primary-dunkelste-kontrast);
             }
         }
 
