Fakultätsfarben und BIldlinks im Meta für besondere Anwendungsfälle
Anzuwenden als CSS Classes:
.bg-fau
.bg-$fak
.bg-notice
.bg-alert
 Sowie .bg-active-$fak

--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -104,7 +104,10 @@
     
     --color-menulink-hover-text: #{$color-menulink-hover-text};
     --color-menulink-hover-bg: #{$color-menulink-hover-bg}; 
+    --color-overlay-dark: #{$colorOverlayDark};
+    --color-overlay-light: #{$colorOverlayLight};
     
+     
     --border-radius: #{$default-border-radius};
     --border-radius-buttons: #{$border-radius-buttons};
     --devider-height: #{$default-devider-height};
