--- a/src/sass/block-library/_block-library.scss
+++ b/src/sass/block-library/_block-library.scss
@@ -3,7 +3,12 @@
 /* Created on : 03.05.2024, 15:10:46
 /*----------------------------------------------------------------------------*/
 
+// Allgemeine Classen für die Blocks
+@import "wp-general-classes";
 
 // Buttons
 @import "wp-block-button";
+
+// Tables
+@import "wp-block-table";
 
