--- a/src/sass/structure/header/_header.scss
+++ b/src/sass/structure/header/_header.scss
@@ -20,12 +20,9 @@
 // Meta Orga Breadcrumb
 @import "orga-breadcrumb";
 
-.header-menu {
 
-    @media (max-width: $screen-md) {
-        width: 100%;
-    }
-}
+// WP Admin Bar
+@wimport "wp-admin-bar";
 
 
 
