--- a/src/sass/plugins/_plugins.scss
+++ b/src/sass/plugins/_plugins.scss
@@ -45,12 +45,11 @@
 // Mimetype Link Icons
 @import "mimetype-link-icons";
 
+// Plugin WS Form
+@import "ws-form";
+
 
 // Everything else, coming from Plugins
 @import "plugin-misc";
 
 
-// The Events Calendar
-// Auskommentiert am 2.4.2024, WW.  Sollte nicht mehr gebraucht werden, da wir 
-// TEC nicht mehr anbieten
-// @import "the-events-calandar";
