--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -197,17 +197,16 @@
     font-family: $fontStack;
     @include px2rem($font-size-content-meta);
 
-    .post-meta-date:before {
-        content: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 84.7 75.9" style="enable-background:new 0 0 84.7 75.9;" xml:space="preserve"><path d="M70.3,6.3h-11V2.9C59.3,1.3,58,0,56.4,0c-1.6,0-2.9,1.3-2.9,2.9v3.4H31.3V2.9C31.3,1.3,30,0,28.4,0s-2.9,1.3-2.9,2.9v3.4h-11C6.5,6.3,0,12.8,0,20.8v40.9c0,7.9,6.4,14.3,14.3,14.3h56.2c7.9,0,14.3-6.4,14.3-14.3V20.8C84.7,12.8,78.3,6.3,70.3,6.3z M14.5,12.1h11v1.7c0,1.6,1.3,2.9,2.9,2.9s2.9-1.3,2.9-2.9v-1.7h22.2v1.7c0,1.6,1.3,2.9,2.9,2.9c1.6,0,2.9-1.3,2.9-2.9v-1.7h11c4.8,0,8.6,3.9,8.6,8.6v2.8H5.8v-2.8C5.8,16,9.7,12.1,14.5,12.1z M70.5,70.1H14.3c-4.6,0-8.4-3.8-8.4-8.4V29.4h73.1v32.3C78.9,66.3,75.1,70.1,70.5,70.1z"/><path d="M22.9,38h-4.4c-1.6,0-2.9,1.3-2.9,2.9c0,1.6,1.3,2.9,2.9,2.9h4.4c1.6,0,2.9-1.3,2.9-2.9C25.8,39.3,24.5,38,22.9,38z"/><path d="M44.6,38h-4.4c-1.6,0-2.9,1.3-2.9,2.9c0,1.6,1.3,2.9,2.9,2.9h4.4c1.6,0,2.9-1.3,2.9-2.9C47.5,39.3,46.2,38,44.6,38z"/><path d="M66.2,38h-4.4c-1.6,0-2.9,1.3-2.9,2.9c0,1.6,1.3,2.9,2.9,2.9h4.4c1.6,0,2.9-1.3,2.9-2.9C69.1,39.3,67.8,38,66.2,38z"/><path d="M22.9,53h-4.4c-1.6,0-2.9,1.3-2.9,2.9c0,1.6,1.3,2.9,2.9,2.9h4.4c1.6,0,2.9-1.3,2.9-2.9C25.8,54.3,24.5,53,22.9,53z"/><path d="M44.6,53h-4.4c-1.6,0-2.9,1.3-2.9,2.9c0,1.6,1.3,2.9,2.9,2.9h4.4c1.6,0,2.9-1.3,2.9-2.9C47.5,54.3,46.2,53,44.6,53z"/><path d="M66.2,53h-4.4c-1.6,0-2.9,1.3-2.9,2.9c0,1.6,1.3,2.9,2.9,2.9h4.4c1.6,0,2.9-1.3,2.9-2.9C69.1,54.3,67.8,53,66.2,53z"/></svg>');
-        width: 1rem;
-        height: 1rem;
-        line-height: 1rem;
-        font-size: 0.6rem;
-        background-repeat: no-repeat;
-        display: inline-block;
-        background-size: 100%;
-        background-position: center center;
-        margin-right: 0.2rem;
+    
+    .post-meta-date {
+	    --fau-icon-color: var(--color-Text);
+	    --fau-icon-color-hover: var(--color-Text);
+	    --fau-icon-size-mask: 1rem;
+	     &:before {
+		@extend .fau-icon;
+		mask-image: svg-icon-date();
+		margin-right: 0.2rem;
+            }
     }
 }
 
