--- a/src/sass/icons/lib/_defaults.scss
+++ b/src/sass/icons/lib/_defaults.scss
@@ -180,6 +180,27 @@
     @return svg-buildbackground($path,$viewbox,$farbe,$width,$height);
 }
 
+// categories
+@function svg-icon-category($farbe: false, $width: 0, $height: 0) {
+    $path: 'd="M85.5,19.2c0-5.3-4.3-9.7-9.7-9.7H41.4c-0.7,0-1.5-0.3-2-0.7L31,2.1C29.3,0.8,27.2,0,25,0h-15C4.6,0,0.2,4.3,0.2,9.7v51.6c0,5.3,4.3,9.7,9.7,9.7h65.9c5.3,0,9.7-4.3,9.7-9.7V19.2z M79,61.3c0,1.8-1.4,3.2-3.2,3.2H9.9c-1.8,0-3.2-1.4-3.2-3.2V33.6H79V61.3z M79,27.2H6.7V9.7c0-1.8,1.4-3.2,3.2-3.2h15c0.7,0,1.5,0.3,2,0.7l8.4,6.7c1.7,1.4,3.9,2.1,6.1,2.1h34.4c1.8,0,3.2,1.4,3.2,3.2L79,27.2z"';
+    $viewbox: '0 0 85.5 70.9';
+    @return svg-buildbackground($path,$viewbox,$farbe,$width,$height);
+}
+
+// tags
+@function svg-icon-tag($farbe: false, $width: 0, $height: 0) {
+    $path: 'd="M79.76,15.97L65.35,1.56c-1.08-1.11-2.6-1.67-4.14-1.54L40.07,1.56c-1.25,0.1-2.43,0.64-3.32,1.51L1.56,38.18C0.55,39.16-0.01,40.51,0,41.92c0,1.4,0.55,2.75,1.54,3.75l34.14,34.11c2.07,2.03,5.38,2.03,7.44,0l35.13-35.11c0.91-0.92,1.45-2.14,1.51-3.42l1.64-21.24C81.48,18.49,80.88,17.01,79.76,15.97z M73.51,40.53L39.4,74.75L6.57,41.92L40.79,7.71l20.47-1.59L75.2,20.07L73.51,40.53z M58.92,22.4c2.07,2.02,5.37,2.02,7.44,0c2.09-2.06,2.12-5.42,0.07-7.51s-5.42-2.12-7.51-0.07s-2.12,5.42-0.07,7.51C58.88,22.35,58.9,22.38,58.92,22.4z"';
+    $viewbox: '0 0 81.41 81.31';
+    @return svg-buildbackground($path,$viewbox,$farbe,$width,$height);
+}
+
+// author
+@function svg-icon-pencil($farbe: false, $width: 0, $height: 0) {
+    $path: 'd="M69.99,2.4l8.64,8.13c3.49,3.28,3.72,8.72,0.58,12.29l-0.24,0.27l-51.3,52.26L0,81.63l6.28-27.65L57.68,2.59C61.06-0.79,66.51-0.87,69.99,2.4z M10.54,58.73L6.9,74.73l16.18-3.68c-1.18-3.79-2.48-6.37-3.79-7.68C17.93,62,14.98,60.42,10.54,58.73z M52.87,14.75l-39.5,39.5c4.56,1.8,7.74,3.58,9.61,5.44c1.78,1.78,3.28,4.54,4.59,8.32l38.92-39.65L52.87,14.75z M61.36,6.27l-4.8,4.8l13.58,13.58l5.03-5.13l0.2-0.22c1.23-1.47,1.11-3.66-0.3-4.99l-8.64-8.13C64.99,4.84,62.75,4.88,61.36,6.27z"';
+    $viewbox: '0 0 81.41 81.63';
+    @return svg-buildbackground($path,$viewbox,$farbe,$width,$height);
+}
+
 
 
 
