Abmilderungen zu CF7 Problem A11y Probleme mit Plugin RRZE Legal Problem mit font size bei Nav links

--- a/src/sass/plugins/_plugins.scss
+++ b/src/sass/plugins/_plugins.scss
@@ -48,6 +48,8 @@
 // Plugin WS Form
 @import "ws-form";
 
+// Plugin RRZE Legal
+@import "ws-form";
 
 // Everything else, coming from Plugins
 @import "plugin-misc";
